added few details to footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NowCast</title>
+    <link rel="icon" href="./assets/logo/nowcast-logo.png" type="image/png">
 
     <!-- google font -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +50,7 @@
     <div class="main1">
       <div class="introduction">
         <div class="logo intro-logo">
-                <img src="./assets/logo/nowcast-logo.png" alt="" height="45px"><h2 class="logoIntro">NowCast</h2>
+                <img src="./assets/logo/nowcast-logo.png" alt="" class="logointoImg"><h2 class="logoIntro">NowCast</h2>
             </div>
         <p class="tagline">Precision in Every Prediction.</p>
         <p class="desc">Stay updated with accurate, real-time weather informations,Get instant forecast for your location</p>
@@ -193,12 +194,23 @@
 
 
     <div class="footer">
-            <div class="f1">
+        <div class="f1-contain">
+             <div class="f1">
                 <div class="logo">
                 <img src="./assets/logo/nowcast-logo.png" alt="" height="35px"><h2>NowCast</h2>
             </div>
                 <div><span class="copyright"> ©2025 NowCast Weather Inc.</span></div>
             </div>
+            <div class="credit">
+                <div class="logo">
+                <img src="./assets/logo/openweather.png" alt="" height="50px">
+            </div>
+            <div class="logo">
+                <img src="./assets/logo/timezonedb.png" alt="" height="30px">
+            </div>
+            </div>
+        </div>
+           
             <div class="f2">
               Tired of weather surprises? Get instant, accurate forecasts right on your finger-tip.
             </div>
