few changes in media queries

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
             </div>
             <div class="credit">
                 <div class="logo">
-                <img src="./assets/logo/openweather.png" alt="" height="50px">
+                <img src="./assets/logo/openweather.png" alt="" height="50px" class="credit-img">
             </div>
             <div class="logo">
-                <img src="./assets/logo/timezonedb.png" alt="" height="30px">
+                <img src="./assets/logo/timezonedb.png" alt="" height="30px" class="credit-img">
             </div>
             </div>
         </div>
