--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
                     </div>
                 </div>
             </div>
+
+
+               <div id="loading-overlay">
+  <div class="spinner"></div>
+</div>
         </div>
 
 
@@ -225,6 +230,10 @@
 
     </div>
     
+
+
+
+ 
 
     
 </body>
