--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             </div>
         <p class="tagline">Precision in Every Prediction.</p>
         <p class="desc">Stay updated with accurate, real-time weather informations,Get instant forecast for your location</p>
-        <a href="#main"><i class="fa-duotone fa-solid fa-circle-chevron-down fa-shake" id="down-arrow"></i></a>
+        <div class="arrow-key">
+            <a href="#main"><i class="fa-duotone fa-solid fa-circle-chevron-down fa-shake" id="down-arrow"></i></a>
+        </div>
       </div>
 
 <div class="main" id="main">
